@@ -10,7 +10,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.folio.processing.exceptions.ReaderException;
 import org.folio.processing.value.ListValue;
 import org.folio.processing.value.MissingValue;
@@ -57,12 +56,12 @@ public final class MarcValueReaderUtil {
       .flatMap(List::stream)
       .filter(value -> isQualified(value, matchExpression.getQualifier()))
       .map(value -> extractComparisonPart(value, matchExpression.getQualifier()))
-      .collect(Collectors.toList());
+      .toList();
 
     if (marcFieldValues.isEmpty()) {
       return MissingValue.getInstance();
     } else if (marcFieldValues.size() == 1) {
-      return StringValue.of(marcFieldValues.get(0));
+      return StringValue.of(marcFieldValues.getFirst());
     } else {
       return ListValue.of(marcFieldValues);
     }
@@ -76,13 +75,13 @@ public final class MarcValueReaderUtil {
 
   private static List<JsonNode> readMarcFieldValues(String marcRecord, Map<String, String> matchExpressionFields) {
     try {
-      org.folio.Record record = new ObjectMapper().readValue(marcRecord, org.folio.Record.class);
-      String parsedContent = record.getParsedRecord().getContent().toString();
+      org.folio.Record marc4jRecord = new ObjectMapper().readValue(marcRecord, org.folio.Record.class);
+      String parsedContent = marc4jRecord.getParsedRecord().getContent().toString();
       JsonNode fieldsNode = new ObjectMapper().readTree(parsedContent).at(MARC_FIELDS_POINTER);
       List<JsonNode> fields = fieldsNode.findValues(matchExpressionFields.get(FIELD_PROFILE_LABEL));
       return fields.stream()
         .filter(field -> field.isTextual() || isMatchingIdentifiers(field, matchExpressionFields))
-        .collect(Collectors.toList());
+        .toList();
     } catch (IOException e) {
       throw new ReaderException("Error reading MARC record", e);
     }
@@ -96,7 +95,7 @@ public final class MarcValueReaderUtil {
     return subfields.findValues(matchExpressionFields.get(SUBFIELD_PROFILE_LABEL)).stream()
       .filter(JsonNode::isTextual)
       .map(JsonNode::textValue)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private static boolean isMatchingIdentifiers(JsonNode field, Map<String, String> matchExpressionFields) {
