@@ -31,7 +31,7 @@ public class DateValue implements Value<List<Date>> {
   }
 
   public String getFromDate() {
-    return new SimpleDateFormat(DATE_FORMAT_PATTERN).format(dateRange.get(0));
+    return new SimpleDateFormat(DATE_FORMAT_PATTERN).format(dateRange.getFirst());
   }
 
   public String getToDate() {
